Issue #26920: Fix not getting the locale's charset upon initializing the interpreter, on platforms that do not have langinfo